WIP: stashing latest

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Pega Digital Design System",
   "scripts": {
-    "bootstrap": "lerna bootstrap --concurrency 12",
+    "bootstrap": "lerna bootstrap",
     "build": "npm run setup:composer && gulp build",
     "changelog": "lerna-changelog",
     "commitmsg": "validate-commit-msg",
