--- a/packages/ui-toolkit/02-tools/tools-export-data/package.json
+++ b/packages/ui-toolkit/02-tools/tools-export-data/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/settings-colors",
-  "description": "Color Settings",
+  "name": "@bolt/tools-export-data",
+  "description": "Helper function to export Sass data as JSON or .js",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -24,7 +24,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/settings-colors"
+    "url": "https://github.com/bolt-design-system/bolt"
   },
   "bugs": {
     "url": "https://github.com/pega-digital/bolt/issues"
@@ -32,8 +32,5 @@
   "main": "index.scss",
   "publishConfig": {
     "access": "public"
-  },
-  "dependencies": {
-    "@bolt/tools-export-data": "^0.1.0-alpha.1"
   }
 }
