--- a/packages/build-tools/build-styles/package.json
+++ b/packages/build-tools/build-styles/package.json
@@ -50,7 +50,7 @@
     "json-sass": "^1.3.5",
     "merge": "^1.2.0",
     "mocha": "^3.4.2",
-    "node-sass-export": "0.0.2",
+    "node-sass-export": "github:bolt-design-system/node-sass-export",
     "npm-sass": "^2.2.1",
     "postcss-discard-comments": "^2.0.4",
     "postcss-easy-import": "^2.1.0",
