--- a/packages/website-pattern-lab/composer.json
+++ b/packages/website-pattern-lab/composer.json
@@ -48,7 +48,8 @@
         "pattern-lab/patternengine-twig": "^2.0.0",
         "pattern-lab/styleguidekit-twig-default": "^3.0.0",
         "pattern-lab/drupal-twig-components": "^2.0.0",
-        "aleksip/plugin-data-transform": "^1.0.0"
+        "aleksip/plugin-data-transform": "^1.0.0",
+        "mexitek/phpcolors": "^0.4.0"
     },
     "config": {
         "process-timeout": 0,
