--- a/packages/website-pattern-lab/config/config.yml
+++ b/packages/website-pattern-lab/config/config.yml
@@ -32,7 +32,7 @@ styleguideKitPath: vendor/pattern-lab/styleguidekit-twig-default
 lineageMatch: '{%([ ]+)?(?:include|extends|embed)( |\()[&quot;\&#039;]([\/.@A-Za-z0-9-_]+)[&quot;\&#039;]([\s\S+]*?)%}'
 lineageMatchKey: 3
 patternExtension: twig
-twigDebug: false
+twigDebug: true
 twigAutoescape: html
 twigDefaultDateFormat: ''
 twigDefaultIntervalFormat: ''
