feat: publishing 1st draft colors to npm

--- a/packages/bolt-toolkit-core/settings/settings-colors/package.json
+++ b/packages/bolt-toolkit-core/settings/settings-colors/package.json
@@ -5,9 +5,11 @@
     "bolt design system",
     "bolt",
     "css framework",
-    "design system"
+    "design system",
+    "colors",
+    "color palette"
   ],
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.1",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -24,16 +26,16 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/settings-colors"
+    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/bolt-toolkit-core/settings/settings-colors"
   },
   "bugs": {
     "url": "https://github.com/pega-digital/bolt/issues"
   },
-  "main": "index.scss",
+  "style": "_settings.colors.scss",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-export-data": "^0.1.0-alpha.1"
+    "@bolt/tools-export-data": "^0.1.0"
   }
 }
