--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ before_script:
 install:
 - npm install -g surge
 - npm install gulpjs/gulp-cli -g
+- npm install mocha -g
 - npm install --global lerna
 - npm run setup:composer
 - npm run bootstrap
