WIP: button styles

--- a/packages/bolt-toolkit-ui/components/components-button/package.json
+++ b/packages/bolt-toolkit-ui/components/components-button/package.json
@@ -31,9 +31,8 @@
     "@bolt/tools-no-select": "^0.1.0-alpha.1",
     "@bolt/tools-spacing": "^0.1.0-alpha.1"
   },
-  "main": "src/scss/index.scss",
-  "style": "src/scss/index.scss",
-  "twig": "src/twig/button.twig",
+  "style": "_components.button.scss",
+  "twig": "button.twig",
   "eyeglass": {
     "sassDir": "src/scss",
     "exports": false,
