--- a/packages/bolt-toolkit-ui/components/components-all/package.json
+++ b/packages/bolt-toolkit-ui/components/components-all/package.json
@@ -40,6 +40,7 @@
     "@bolt/components-page-footer": "^0.1.0-alpha.1",
     "@bolt/components-page-intro": "^0.1.0-alpha.1",
     "@bolt/components-site": "^0.1.0-alpha.1",
-    "@bolt/components-color-swatch": "^0.1.0-alpha.1"
+    "@bolt/components-color-swatch": "^0.1.0-alpha.1",
+    "@bolt/components-button": "^0.1.0-alpha.1"
   }
 }
