--- a/packages/bolt-build-tools/build-slack/package.json
+++ b/packages/bolt-build-tools/build-slack/package.json
@@ -26,12 +26,18 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "index.js",
   "dependencies": {
+    "cross-spawn": "^5.1.0",
     "dotenv": "^4.0.0",
+    "git-branch": "^1.0.0",
     "merge": "^1.2.0",
     "node-slack": "0.0.7",
-    "shelljs": "^0.7.8"
+    "normalize-url": "^1.9.1",
+    "now": "^2.0.3",
+    "octonode": "^0.8.0",
+    "shelljs": "^0.7.8",
+    "travis-after-all": "^1.4.5",
+    "url-regex": "^4.1.1"
   },
   "private": false
 }
