--- a/packages/bolt-toolkit-ui/components/components-button/package.json
+++ b/packages/bolt-toolkit-ui/components/components-button/package.json
@@ -23,11 +23,11 @@
     "url": "https://github.com/pega-digital/bolt/issues"
   },
   "dependencies": {
-    "@bolt/settings-colors": "^0.1.1",
+    "@bolt/settings-colors": "^0.3.0",
     "@bolt/settings-global": "^0.2.0",
     "@bolt/tools-button-color": "^0.2.0",
-    "@bolt/tools-font-size": "^0.1.0-beta.2",
-    "@bolt/tools-font-weight": "^0.1.0-beta.1",
+    "@bolt/tools-font-size": "^0.2.0",
+    "@bolt/tools-font-weight": "^0.2.0",
     "@bolt/tools-no-select": "^0.1.0-alpha.1",
     "@bolt/tools-spacing": "^0.2.0"
   },
