--- a/packages/bolt-toolkit-ui/components/components-heading/package.json
+++ b/packages/bolt-toolkit-ui/components/components-heading/package.json
@@ -22,16 +22,7 @@
   "bugs": {
     "url": "https://github.com/pega-digital/bolt/issues"
   },
-  "dependencies": {
-    "@bolt/settings-colors": "^0.3.0",
-    "@bolt/settings-global": "^0.4.0",
-    "@bolt/tools-button-color": "^0.2.0",
-    "@bolt/tools-font-size": "^0.2.0",
-    "@bolt/tools-font-weight": "^0.2.0",
-    "@bolt/tools-no-select": "^0.2.0",
-    "@bolt/tools-spacing": "^0.2.0"
-  },
-  "style": "_components/heading.scss",
+  "style": "_components.heading.scss",
   "publishConfig": {
     "access": "public"
   }
