--- a/packages/bolt-build-tools/build-slack/package.json
+++ b/packages/bolt-build-tools/build-slack/package.json
@@ -37,6 +37,7 @@
     "octonode": "^0.8.0",
     "shelljs": "^0.7.8",
     "travis-after-all": "^1.4.5",
+    "travis-status": "^2.0.0",
     "url-regex": "^4.1.1"
   },
   "private": false
