fix: fixing composer deps version

--- a/packages/website-pattern-lab/composer.json
+++ b/packages/website-pattern-lab/composer.json
@@ -30,8 +30,8 @@
     },
     "repositories": [
       {
-        "type": "path",
-        "url": "../pattern-lab/patternlab-php-core"
+        "type": "vcs",
+        "url": "https://github.com/drupal-pattern-lab/patternlab-php-core"
       },
       {
         "type": "path",
@@ -55,7 +55,7 @@
     "require": {
       "php": ">=7.0",
        "cweagans/composer-patches": "~1.0",
-      "pattern-lab/core": "dev-feature/php7 as 2.7.0",
+      "pattern-lab/core": "^2.7.1",
       "pattern-lab/patternengine-twig": "^2.0.0",
       "pattern-lab/styleguidekit-twig-default": "^3.0.0",
       "pattern-lab/drupal-twig-components": "^2.0.0",
