WIP: headline styles

--- a/packages/bolt-toolkit-ui/components/components-all/package.json
+++ b/packages/bolt-toolkit-ui/components/components-all/package.json
@@ -37,9 +37,9 @@
   },
   "dependencies": {
     "@bolt/components-color-swatch": "^0.2.0",
-    "@bolt/components-heading": "^0.2.0",
     "@bolt/components-page-footer": "^0.2.0",
     "@bolt/components-page-intro": "^0.2.0",
-    "@bolt/components-site": "^0.2.0"
+    "@bolt/components-site": "^0.2.0",
+    "@bolt/components-headline": "^0.2.0"
   }
 }
