--- a/packages/bolt-toolkit-ui/components/components-headline/package.json
+++ b/packages/bolt-toolkit-ui/components/components-headline/package.json
@@ -23,12 +23,8 @@
     "url": "https://github.com/pega-digital/bolt/issues"
   },
   "dependencies": {
-    "@bolt/settings-colors": "^0.1.1",
-    "@bolt/settings-global": "^0.2.0",
-    "@bolt/tools-font-family": "^0.2.0",
-    "@bolt/tools-font-size": "^0.1.0-beta.2",
-    "@bolt/tools-font-weight": "^0.1.0-beta.1",
-    "@bolt/tools-spacing": "^0.1.0-alpha.1"
+    "@bolt/settings-all": "^0.4.0",
+    "@bolt/tools-all": "^0.2.0"
   },
   "style": "_components.headline.scss",
   "twig": "headline.twig",
