WIP: button group and individual width options

--- a/packages/bolt-toolkit-core/07-utilities/utilities-all/package.json
+++ b/packages/bolt-toolkit-core/07-utilities/utilities-all/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@bolt/utilities-spacing": "^0.1.0-alpha.1",
     "@bolt/utilities-flex": "^0.1.0-alpha.1",
-    "@bolt/utilities-widths": "^0.1.0-alpha.1"
+    "@bolt/utilities-widths": "^0.1.0-alpha.1",
+    "@bolt/utilities-visuallyhidden": "^0.1.0-alpha.1"
   }
 }
