feat: adding working updates to allow responsive typography sizes to be more precise when needed.

--- a/packages/bolt-toolkit-core/01-settings/settings-font-size/package.json
+++ b/packages/bolt-toolkit-core/01-settings/settings-font-size/package.json
@@ -34,5 +34,11 @@
   "style": "_settings.font-size.scss",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bolt/settings-breakpoints": "^0.4.0",
+    "@bolt/settings-global": "^0.4.0",
+    "@bolt/tools-breakpoint": "^0.0.0",
+    "@bolt/tools-px-to-rem": "^0.0.0"
   }
 }
