--- a/packages/bolt-toolkit-core/02-tools/tools-px-to-rem/package.json
+++ b/packages/bolt-toolkit-core/02-tools/tools-px-to-rem/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@bolt/tools-font-size",
-  "description": "Font Size Mixin",
+  "name": "@bolt/tools-px-to-rem",
+  "description": "Helper function to convert pxs to rems",
   "keywords": [
     "bolt design system",
     "bolt",
     "css framework",
     "design system",
-    "typography"
+    "pixel to rem"
   ],
-  "version": "0.2.0",
+  "version": "0.0.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -25,19 +25,16 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/tools-typography"
+    "url": "https://github.com/bolt-design-system/bolt"
   },
   "bugs": {
-    "url": "https://github.com/bolt-design-system/bolt/issues"
+    "url": "https://github.com/pega-digital/bolt/issues"
   },
-  "style": "_tools.font-size.scss",
+  "style": "_tools.px-to-rem.scss",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-font-size": "^0.5.0",
-    "@bolt/tools-sassy-maps": "^0.2.0",
-    "@bolt/tools-px-to-rem": "^0.0.0",
-    "@bolt/tools-poly-fluid-sizing": "^0.0.0"
+    "@bolt/settings-global": "^0.4.0"
   }
 }
