WIP: headline spacing

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ boltdesignsystem
 
 # Ignore any Pattern Lab --> packages folders being symlinked
 sandbox/pattern-library/source/_patterns/**/bolt-*
+packages/website-pattern-lab
