--- a/packages/bolt-toolkit-ui/components/components-all/package.json
+++ b/packages/bolt-toolkit-ui/components/components-all/package.json
@@ -9,7 +9,7 @@
     "design system",
     "components"
   ],
-  "version": "0.2.0",
+  "version": "0.2.1",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,10 +36,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/components-color-swatch": "^0.2.0",
+    "@bolt/components-color-swatch": "^0.2.1",
+    "@bolt/components-headline": "^0.2.1",
     "@bolt/components-page-footer": "^0.2.0",
-    "@bolt/components-page-intro": "^0.2.0",
-    "@bolt/components-site": "^0.2.0",
-    "@bolt/components-headline": "^0.2.0"
+    "@bolt/components-page-intro": "^0.2.1",
+    "@bolt/components-site": "^0.2.1"
   }
 }
