chore: version bump for release

--- a/packages/bolt-toolkit-core/04-elements/elements-all/package.json
+++ b/packages/bolt-toolkit-core/04-elements/elements-all/package.json
@@ -8,7 +8,7 @@
     "design system",
     "elements"
   ],
-  "version": "0.2.0",
+  "version": "0.3.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,9 +36,9 @@
   },
   "dependencies": {
     "@bolt/elements-headings": "^0.2.0",
-    "@bolt/elements-links": "^0.2.0",
-    "@bolt/elements-page": "^0.2.0",
-    "@bolt/elements-small": "^0.2.0",
-    "@bolt/elements-images": "^0.0.0"
+    "@bolt/elements-images": "^0.1.0",
+    "@bolt/elements-links": "^0.3.0",
+    "@bolt/elements-page": "^0.3.0",
+    "@bolt/elements-small": "^0.3.0"
   }
 }
