--- a/packages/bolt-toolkit-core/07-utilities/utilities-all/package.json
+++ b/packages/bolt-toolkit-core/07-utilities/utilities-all/package.json
@@ -8,7 +8,7 @@
     "design system",
     "utilities"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -35,9 +35,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/utilities-flex": "^0.2.0",
-    "@bolt/utilities-spacing": "^0.2.0",
-    "@bolt/utilities-widths": "^0.2.0",
-    "@bolt/utilities-colors": "^0.0.0"
+    "@bolt/utilities-colors": "^0.1.0",
+    "@bolt/utilities-flex": "^0.3.0",
+    "@bolt/utilities-spacing": "^0.3.0",
+    "@bolt/utilities-widths": "^0.3.0"
   }
 }
