--- a/packages/bolt-toolkit-core/02-tools/tools-font-size/package.json
+++ b/packages/bolt-toolkit-core/02-tools/tools-font-size/package.json
@@ -36,7 +36,9 @@
   },
   "dependencies": {
     "@bolt/settings-font-size": "^0.6.0",
-    "@bolt/tools-sassy-maps": "^0.3.0"
+    "@bolt/tools-sassy-maps": "^0.3.0",
+    "@bolt/tools-poly-fluid-sizing": "^0.0.0",
+    "@bolt/tools-px-to-rem": "^0.0.0"
   },
   "private": false
 }
