--- a/packages/bolt-toolkit-ui/components/components-button/package.json
+++ b/packages/bolt-toolkit-ui/components/components-button/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@bolt/components-button",
   "type": "pattern",
-  "patternType": "atoms",
+  "patternType": "components",
+  "patternSubtype": "button",
   "description": "Button Component",
   "keywords": [
     "eyeglass-module",
@@ -30,8 +31,14 @@
     "@bolt/tools-no-select": "^0.1.0-alpha.1",
     "@bolt/tools-spacing": "^0.3.0"
   },
-  "style": "index.scss",
-  "twig": "button.twig",
+  "main": "src/scss/index.scss",
+  "style": "src/scss/index.scss",
+  "twig": "src/twig/button.twig",
+  "eyeglass": {
+    "sassDir": "src/scss",
+    "exports": false,
+    "needs": "*"
+  },
   "publishConfig": {
     "access": "public"
   }
