Feature/bolt 154 headlines (#121)
* WIP: headline sizes

* WIP: headline styles

* WIP: headline sizing

* WIP: enable font kerning

* WIP: subheadlines

* feat: adding stylelint validation + validated CSS, updated color palette

* chore: re-organizing and updating symlinks to prep for new upcoming Grav site

fixing broken symlinks and pattern mappings to Pattern Lab

* fix: fixing PL setup:composer command + removing old PL folder

* fix: upgrading lerna version to fix nightly release canary feature

fix: fixing build issue if symlink for PL doesn't exist

* test: re-testing travis deployment

* feat: adding working updates to allow responsive typography sizes to be more precise when needed.

* WIP: headline spacing

* Merge branch 'master' into feature/bolt-119-buttons

# Conflicts:
#	.eslintignore
#	.gitignore
#	.snyk
#	.stylelintrc
#	.travis.yml
#	README.md
#	gulpconfig.js
#	gulpfile.babel.js
#	lerna.json
#	package-lock.json
#	package.json
#	packages/bolt-config/config-stylelint/index.js
#	scripts/deploy-bolt.sh
#	yarn.lock

* WIP: headlines with line and icons

* fix: merging latest from develop -- resolving conflicts

* fix: fixing build issues, merging latest from develop

* chore: -re-merging from develop

* test: testing build, merging code

* fix: removing test prefix from headlines

--- a/packages/bolt-toolkit-core/02-tools/tools-poly-fluid-sizing/package.json
+++ b/packages/bolt-toolkit-core/02-tools/tools-poly-fluid-sizing/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/tools-font-size",
-  "description": "Font Size Mixin",
+  "name": "@bolt/tools-poly-fluid-sizing",
+  "description": "Poly Fluid Sizing Mixin",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -8,7 +8,7 @@
     "design system",
     "typography"
   ],
-  "version": "0.3.0",
+  "version": "0.0.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -25,20 +25,22 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/tools-typography"
+    "url": "https://github.com/bolt-design-system/bolt"
   },
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "_tools.font-size.scss",
+  "style": "_tools.poly-fluid-sizing.scss",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-font-size": "^0.6.0",
-    "@bolt/tools-sassy-maps": "^0.3.0",
-    "@bolt/tools-poly-fluid-sizing": "^0.0.0",
-    "@bolt/tools-px-to-rem": "^0.0.0"
-  },
-  "private": false
+    "@bolt/settings-font-size": "^0.5.0",
+    "@bolt/tools-sassy-maps": "^0.2.0",
+    "@bolt/tools-linear-interpolation": "^0.0.0",
+    "@bolt/tools-map-sort": "^0.0.0",
+    "@bolt/tools-list-sort": "^0.0.0",
+    "@bolt/tools-list-remove": "^0.0.0",
+    "@bolt/tools-breakpoint": "^0.0.0"
+  }
 }
