--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,5 @@ boltdesignsystem
 .env
 
 # Ignore any Pattern Lab --> packages folders being symlinked
-sandbox/pattern-library/source/_patterns/**/bolt-*
+packages/website-pattern-lab/source/_patterns/**/bolt-*
+packages/website-pattern-lab
