--- a/packages/bolt-toolkit-core/02-tools/tools-list-sort/package.json
+++ b/packages/bolt-toolkit-core/02-tools/tools-list-sort/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "@bolt/tools-font-size",
-  "description": "Font Size Mixin",
+  "name": "@bolt/tools-list-sort",
+  "description": "Sort a Sass list",
   "keywords": [
     "bolt design system",
     "bolt",
+    "bolt core",
     "css framework",
     "design system",
-    "typography"
+    "list-sort"
   ],
-  "version": "0.3.0",
+  "version": "0.0.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -25,20 +26,16 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/tools-typography"
+    "url": "https://github.com/bolt-design-system/bolt/"
   },
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "_tools.font-size.scss",
+  "style": "_tools.list-sort.scss",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-font-size": "^0.6.0",
-    "@bolt/tools-sassy-maps": "^0.3.0",
-    "@bolt/tools-poly-fluid-sizing": "^0.0.0",
-    "@bolt/tools-px-to-rem": "^0.0.0"
-  },
-  "private": false
+    "@bolt/tools-list-remove": "^0.0.0"
+  }
 }
