WIP: stashing webpack merge

--- a/lerna.json
+++ b/lerna.json
@@ -15,6 +15,7 @@
   },
   "packages": [
     "packages/bolt-build-tools/**",
+    "packages/bolt-static-assets/**",
     "packages/bolt-config/**",
     "packages/bolt-toolkit/**",
     "packages/bolt-toolkit-core/**",
