--- a/packages/bolt-build-tools/package.json
+++ b/packages/bolt-build-tools/package.json
@@ -30,7 +30,8 @@
     "@bolt/build-server": "^0.2.0",
     "@bolt/build-slack": "^0.3.0",
     "@bolt/build-styles": "^0.3.0",
-    "@bolt/build-symlinks": "^0.3.0"
+    "@bolt/build-symlinks": "^0.3.0",
+    "@bolt/build-webpack": "^0.1.0"
   },
   "publishConfig": {
     "access": "public"
