--- a/packages/bolt-toolkit-core/03-generic/generic-all/package.json
+++ b/packages/bolt-toolkit-core/03-generic/generic-all/package.json
@@ -37,6 +37,7 @@
     "@bolt/generic-global": "^0.3.0",
     "@bolt/generic-normalize": "^0.3.0",
     "@bolt/generic-reset": "^0.3.0",
-    "@bolt/generic-shared": "^0.3.0"
+    "@bolt/generic-shared": "^0.3.0",
+    "@bolt/generic-font-stacks": "^0.0.0"
   }
 }
