--- a/packages/bolt-toolkit-core/02-tools/tools-all/package.json
+++ b/packages/bolt-toolkit-core/02-tools/tools-all/package.json
@@ -42,6 +42,7 @@
     "@bolt/tools-font-weight": "^0.3.0",
     "@bolt/tools-sassy-maps": "^0.3.0",
     "@bolt/tools-spacing": "^0.3.0",
+    "@bolt/tools-font-face": "^0.0.0",
     "@bolt/tools-strip-unit": "^0.3.0",
     "@bolt/tools-poly-fluid-sizing": "^0.0.0",
     "@bolt/tools-px-to-rem": "^0.0.0",
