WIP: headline quote

--- a/packages/website/user/themes/bolt/pattern-lab/config/config.yml
+++ b/packages/website/user/themes/bolt/pattern-lab/config/config.yml
@@ -115,6 +115,7 @@ plugins:
         paths:
           - source/_patterns/02-molecules
           - source/_patterns/02-molecules/bolt-card
+          - source/_patterns/02-molecules/bolt-teaser
           - source/_patterns/02-molecules/footer
           - source/_patterns/02-molecules/layout/bolt-band
           - source/_patterns/02-molecules/layout/bolt-grid
