chore: adding updated version bumps

--- a/build-tools/build-jekyll/package.json
+++ b/build-tools/build-jekyll/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-jekyll",
-  "version": "0.2.0",
+  "version": "0.3.0-alpha.bdfcf9e9",
   "license": "MIT",
   "description": "Compile Jekyll",
   "main": "index.js",
@@ -22,7 +22,7 @@
     }
   ],
   "dependencies": {
-    "@bolt/build-core": "^0.2.1",
+    "@bolt/build-core": "^0.3.0-alpha.bdfcf9e9",
     "child_process": "^1.0.2",
     "debug": "^2.6.8",
     "fs-extra": "^4.0.0",
