--- a/build-tools/build-patternlab/package.json
+++ b/build-tools/build-patternlab/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-patternlab",
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "license": "MIT",
   "description": "Compile Pattern Lab",
   "main": "index.js",
@@ -22,8 +22,8 @@
     }
   ],
   "dependencies": {
-    "@bolt/build-core": "^0.2.1",
-    "@bolt/build-symlinks": "^0.3.0",
+    "@bolt/build-core": "^0.3.0-alpha.bdfcf9e9",
+    "@bolt/build-symlinks": "^0.4.0-alpha.bdfcf9e9",
     "child_process": "^1.0.2",
     "debug": "^2.6.8",
     "fs-extra": "^4.0.0",
