--- a/build-tools/build-styles/package.json
+++ b/build-tools/build-styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-styles",
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "license": "MIT",
   "description": "Compile Sass to CSS",
   "main": "index.js",
@@ -22,7 +22,7 @@
     }
   ],
   "dependencies": {
-    "@bolt/build-core": "^0.2.1",
+    "@bolt/build-core": "^0.3.0-alpha.bdfcf9e9",
     "autoprefixer": "^7.1.3",
     "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
