--- a/build-tools/build-symlinks/package.json
+++ b/build-tools/build-symlinks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-symlinks",
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "license": "MIT",
   "description": "Automatically create symlinks between PL and Packages",
   "main": "index.js",
@@ -24,7 +24,7 @@
     }
   ],
   "dependencies": {
-    "@bolt/build-core": "^0.2.1",
+    "@bolt/build-core": "^0.3.0-alpha.bdfcf9e9",
     "del-symlinks": "^0.1.2",
     "fs": "0.0.1-security",
     "globby": "^6.1.0",
