--- a/src/_patterns/01-core/02-tools/tools-linear-interpolation/package.json
+++ b/src/_patterns/01-core/02-tools/tools-linear-interpolation/package.json
@@ -9,7 +9,7 @@
     "design system",
     "linear Interpolation"
   ],
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
