--- a/src/_patterns/01-core/02-tools/tools-map-sort/package.json
+++ b/src/_patterns/01-core/02-tools/tools-map-sort/package.json
@@ -9,7 +9,7 @@
     "design system",
     "map-sort"
   ],
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,6 +36,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-list-sort": "^0.0.0"
+    "@bolt/tools-list-sort": "^0.1.0-alpha.bdfcf9e9"
   }
 }
