--- a/src/_patterns/01-core/03-generic/generic-all/package.json
+++ b/src/_patterns/01-core/03-generic/generic-all/package.json
@@ -9,7 +9,7 @@
     "design system",
     "generic"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,10 +36,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/generic-font-stacks": "^0.0.0",
-    "@bolt/generic-global": "^0.3.0",
-    "@bolt/generic-normalize": "^0.3.0",
-    "@bolt/generic-reset": "^0.3.0",
-    "@bolt/generic-shared": "^0.3.0"
+    "@bolt/generic-font-stacks": "^0.1.0-alpha.bdfcf9e9",
+    "@bolt/generic-global": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/generic-normalize": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/generic-reset": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/generic-shared": "^0.4.0-alpha.bdfcf9e9"
   }
 }
