--- a/src/_patterns/01-core/06-themes/themes-all/package.json
+++ b/src/_patterns/01-core/06-themes/themes-all/package.json
@@ -8,7 +8,7 @@
     "design system",
     "themes"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -33,8 +33,5 @@
   "style": "_themes.all.scss",
   "publishConfig": {
     "access": "public"
-  },
-  "dependencies": {
-
   }
 }
