--- a/src/_patterns/02-components/components-chip-list/package.json
+++ b/src/_patterns/02-components/components-chip-list/package.json
@@ -9,7 +9,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,7 +36,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/objects-inline-list": "^0.2.0",
-    "@bolt/components-chip": "^0.0.0"
+    "@bolt/components-chip": "^0.1.0-alpha.bdfcf9e9",
+    "@bolt/objects-inline-list": "^0.3.0-alpha.bdfcf9e9"
   }
 }
