--- a/src/_patterns/02-components/modules-critical-path/package.json
+++ b/src/_patterns/02-components/modules-critical-path/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/components-critical-path",
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.bdfcf9e9",
   "description": "Bolt Collection of Critical Path JS",
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
   "author": "Salem Ghoweri",
   "license": "MIT",
   "dependencies": {
-    "@bolt/components-font-loader": "^0.1.0"
+    "@bolt/components-font-loader": "^0.2.0-alpha.bdfcf9e9"
   },
   "publishConfig": {
     "access": "public"
