--- a/src/_patterns/02-components/modules-font-loader/package.json
+++ b/src/_patterns/02-components/modules-font-loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/components-font-loader",
-  "version": "0.1.0",
+  "version": "0.2.0-alpha.bdfcf9e9",
   "description": "Async font loader",
   "repository": {
     "type": "git",
