--- a/build-tools/build-browsersync/package.json
+++ b/build-tools/build-browsersync/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-server",
-  "version": "0.2.0",
+  "version": "0.3.0-alpha.bdfcf9e9",
   "license": "MIT",
   "description": "Build tools server",
   "main": "index.js",
@@ -26,7 +26,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/build-core": "^0.2.1",
+    "@bolt/build-core": "^0.3.0-alpha.bdfcf9e9",
     "browser-sync": "^2.18.12",
     "bs-html-injector": "^3.0.3",
     "debug": "^2.6.8",
