--- a/build-tools/build-patternkit/package.json
+++ b/build-tools/build-patternkit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-patternkit",
-  "version": "0.2.0",
+  "version": "0.3.0-alpha.bdfcf9e9",
   "license": "MIT",
   "description": "Automatically move files needed for Pattern Kit",
   "main": "index.js",
