--- a/build-tools/build-webpack/package.json
+++ b/build-tools/build-webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-webpack",
-  "version": "0.1.0",
+  "version": "0.2.0-alpha.bdfcf9e9",
   "license": "MIT",
   "description": "Webpack",
   "main": "webpack.js",
@@ -23,9 +23,9 @@
   ],
   "dependencies": {
     "gulp-util": "^3.0.8",
+    "merge": "^1.2.0",
     "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1",
-    "merge": "^1.2.0"
+    "webpack-dev-server": "^2.7.1"
   },
   "publishConfig": {
     "access": "public"
