--- a/src/_patterns/01-core/01-settings/settings-all/package.json
+++ b/src/_patterns/01-core/01-settings/settings-all/package.json
@@ -9,7 +9,7 @@
     "itcss",
     "settings"
   ],
-  "version": "0.5.0",
+  "version": "0.6.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,13 +36,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-breakpoints": "^0.5.0",
-    "@bolt/settings-colors": "^0.4.0",
-    "@bolt/settings-font-family": "^0.5.0",
-    "@bolt/settings-font-size": "^0.6.0",
-    "@bolt/settings-font-weight": "^0.6.0",
-    "@bolt/settings-global": "^0.5.0",
-    "@bolt/settings-spacing": "^0.5.0",
+    "@bolt/settings-breakpoints": "^0.6.0-alpha.bdfcf9e9",
+    "@bolt/settings-colors": "^0.5.0-alpha.bdfcf9e9",
+    "@bolt/settings-font-family": "^0.6.0-alpha.bdfcf9e9",
+    "@bolt/settings-font-size": "^0.7.0-alpha.bdfcf9e9",
+    "@bolt/settings-font-weight": "^0.7.0-alpha.bdfcf9e9",
+    "@bolt/settings-global": "^0.6.0-alpha.bdfcf9e9",
+    "@bolt/settings-spacing": "^0.6.0-alpha.bdfcf9e9",
     "mocha": "^3.5.3",
     "node-sass": "^4.5.3",
     "node-sass-magic-importer": "^5.0.0-alpha.11",
