--- a/src/_patterns/01-core/01-settings/settings-font-family/package.json
+++ b/src/_patterns/01-core/01-settings/settings-font-family/package.json
@@ -9,7 +9,7 @@
     "typography",
     "font family"
   ],
-  "version": "0.5.0",
+  "version": "0.6.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,6 +36,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-global": "^0.5.0"
+    "@bolt/settings-global": "^0.6.0-alpha.bdfcf9e9"
   }
 }
