--- a/src/_patterns/01-core/01-settings/settings-spacing/package.json
+++ b/src/_patterns/01-core/01-settings/settings-spacing/package.json
@@ -9,7 +9,7 @@
     "spacing",
     "spacing scale"
   ],
-  "version": "0.5.0",
+  "version": "0.6.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
