--- a/src/_patterns/01-core/02-tools/tools-font-face/package.json
+++ b/src/_patterns/01-core/02-tools/tools-font-face/package.json
@@ -8,7 +8,7 @@
     "design system",
     "typography"
   ],
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -35,7 +35,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-font-family": "^0.5.0",
-    "@bolt/tools-sassy-maps": "^0.3.0"
+    "@bolt/settings-font-family": "^0.6.0-alpha.bdfcf9e9",
+    "@bolt/tools-sassy-maps": "^0.4.0-alpha.bdfcf9e9"
   }
 }
