--- a/src/_patterns/01-core/02-tools/tools-font-kerning/package.json
+++ b/src/_patterns/01-core/02-tools/tools-font-kerning/package.json
@@ -10,7 +10,7 @@
     "typography",
     "font kerning"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
