--- a/src/_patterns/01-core/02-tools/tools-font-size/package.json
+++ b/src/_patterns/01-core/02-tools/tools-font-size/package.json
@@ -8,7 +8,7 @@
     "design system",
     "typography"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -35,10 +35,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-font-size": "^0.6.0",
-    "@bolt/tools-sassy-maps": "^0.3.0",
-    "@bolt/tools-poly-fluid-sizing": "^0.0.0",
-    "@bolt/tools-px-to-rem": "^0.0.0"
+    "@bolt/settings-font-size": "^0.7.0-alpha.bdfcf9e9",
+    "@bolt/tools-poly-fluid-sizing": "^0.1.0-alpha.bdfcf9e9",
+    "@bolt/tools-px-to-rem": "^0.1.0-alpha.bdfcf9e9",
+    "@bolt/tools-sassy-maps": "^0.4.0-alpha.bdfcf9e9"
   },
   "private": false
 }
