--- a/src/_patterns/01-core/02-tools/tools-no-select/package.json
+++ b/src/_patterns/01-core/02-tools/tools-no-select/package.json
@@ -9,7 +9,7 @@
     "design system",
     "no select"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
