--- a/src/_patterns/01-core/02-tools/tools-scrolling/package.json
+++ b/src/_patterns/01-core/02-tools/tools-scrolling/package.json
@@ -8,7 +8,7 @@
     "design system",
     "scrolling"
   ],
-  "version": "0.4.0",
+  "version": "0.5.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
