--- a/src/_patterns/01-core/02-tools/tools-strip-unit/package.json
+++ b/src/_patterns/01-core/02-tools/tools-strip-unit/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.3.1",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
