--- a/src/_patterns/01-core/02-tools/tools-uppercase/package.json
+++ b/src/_patterns/01-core/02-tools/tools-uppercase/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
