--- a/src/_patterns/01-core/03-generic/generic-font-stacks/package.json
+++ b/src/_patterns/01-core/03-generic/generic-font-stacks/package.json
@@ -8,7 +8,7 @@
     "design system",
     "typography"
   ],
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
