--- a/src/_patterns/01-core/03-generic/generic-shared/package.json
+++ b/src/_patterns/01-core/03-generic/generic-shared/package.json
@@ -8,7 +8,7 @@
     "design system",
     "generic"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -31,8 +31,8 @@
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
   "dependencies": {
-    "@bolt/settings-spacing": "^0.5.0",
-    "@bolt/tools-spacing": "^0.3.0"
+    "@bolt/settings-spacing": "^0.6.0-alpha.bdfcf9e9",
+    "@bolt/tools-spacing": "^0.4.0-alpha.bdfcf9e9"
   },
   "style": "_generic.shared.scss",
   "publishConfig": {
