--- a/src/_patterns/01-core/04-elements/elements-all/package.json
+++ b/src/_patterns/01-core/04-elements/elements-all/package.json
@@ -9,7 +9,7 @@
     "design system",
     "elements"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,13 +36,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/elements-code": "^0.1.0",
-    "@bolt/elements-headings": "^0.2.0",
-    "@bolt/elements-images": "^0.1.0",
-    "@bolt/elements-links": "^0.3.0",
-    "@bolt/elements-page": "^0.3.0",
-    "@bolt/elements-paragraphs": "^0.0.0",
-    "@bolt/elements-small": "^0.3.0",
-    "@bolt/elements-tables": "^0.2.0"
+    "@bolt/elements-code": "^0.2.0-alpha.bdfcf9e9",
+    "@bolt/elements-headings": "^0.3.0-alpha.bdfcf9e9",
+    "@bolt/elements-images": "^0.2.0-alpha.bdfcf9e9",
+    "@bolt/elements-links": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/elements-page": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/elements-paragraphs": "^0.1.0-alpha.bdfcf9e9",
+    "@bolt/elements-small": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/elements-tables": "^0.3.0-alpha.bdfcf9e9"
   }
 }
