--- a/src/_patterns/01-core/04-elements/elements-small/package.json
+++ b/src/_patterns/01-core/04-elements/elements-small/package.json
@@ -11,7 +11,7 @@
     "design system",
     "elements"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
