--- a/src/_patterns/01-core/07-utilities/utilities-all/package.json
+++ b/src/_patterns/01-core/07-utilities/utilities-all/package.json
@@ -8,7 +8,7 @@
     "design system",
     "utilities"
   ],
-  "version": "0.4.0",
+  "version": "0.5.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -35,11 +35,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/utilities-clearfix": "^0.3.0",
-    "@bolt/utilities-colors": "^0.1.0",
-    "@bolt/utilities-flex": "^0.3.0",
-    "@bolt/utilities-spacing": "^0.3.0",
-    "@bolt/utilities-visuallyhidden": "^0.3.0",
-    "@bolt/utilities-widths": "^0.3.0"
+    "@bolt/utilities-clearfix": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/utilities-colors": "^0.2.0-alpha.bdfcf9e9",
+    "@bolt/utilities-flex": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/utilities-spacing": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/utilities-visuallyhidden": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/utilities-widths": "^0.4.0-alpha.bdfcf9e9"
   }
 }
