--- a/src/_patterns/01-core/07-utilities/utilities-colors/package.json
+++ b/src/_patterns/01-core/07-utilities/utilities-colors/package.json
@@ -8,7 +8,7 @@
     "design system",
     "utilities"
   ],
-  "version": "0.1.0",
+  "version": "0.2.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
