--- a/src/_patterns/01-core/07-utilities/utilities-visuallyhidden/package.json
+++ b/src/_patterns/01-core/07-utilities/utilities-visuallyhidden/package.json
@@ -8,7 +8,7 @@
     "design system",
     "utilities"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -35,6 +35,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-visuallyhidden": "^0.4.0"
+    "@bolt/tools-visuallyhidden": "^0.5.0-alpha.bdfcf9e9"
   }
 }
