--- a/src/_patterns/02-components/components-all/package.json
+++ b/src/_patterns/02-components/components-all/package.json
@@ -10,7 +10,7 @@
     "design system",
     "components"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -37,19 +37,19 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/components-article": "0.3.0",
-    "@bolt/components-band": "0.0.0",
-    "@bolt/components-button": "0.4.0",
-    "@bolt/components-button-group": "0.0.0",
-    "@bolt/components-card": "0.3.0",
-    "@bolt/components-color-swatch": "0.3.0",
-    "@bolt/components-critical-path": "0.0.0",
-    "@bolt/components-font-loader": "0.1.0",
-    "@bolt/components-headline": "0.3.0",
-    "@bolt/components-page-footer": "0.2.0",
-    "@bolt/components-site": "0.3.0",
-    "@bolt/components-teaser": "0.0.0",
-    "@bolt/components-chip": "0.0.0",
-    "@bolt/components-chip-list": "0.0.0"
+    "@bolt/components-article": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/components-band": "^0.1.0-alpha.bdfcf9e9",
+    "@bolt/components-button": "^0.5.0-alpha.bdfcf9e9",
+    "@bolt/components-button-group": "^0.1.0-alpha.bdfcf9e9",
+    "@bolt/components-card": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/components-chip": "^0.1.0-alpha.bdfcf9e9",
+    "@bolt/components-chip-list": "^0.1.0-alpha.bdfcf9e9",
+    "@bolt/components-color-swatch": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/components-critical-path": "^0.1.0-alpha.bdfcf9e9",
+    "@bolt/components-font-loader": "^0.2.0-alpha.bdfcf9e9",
+    "@bolt/components-headline": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/components-page-footer": "^0.3.0-alpha.bdfcf9e9",
+    "@bolt/components-site": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/components-teaser": "^0.1.0-alpha.bdfcf9e9"
   }
 }
