--- a/src/_patterns/02-components/components-button/package.json
+++ b/src/_patterns/02-components/components-button/package.json
@@ -10,7 +10,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.4.0",
+  "version": "0.5.0-alpha.bdfcf9e9",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
