--- a/src/_patterns/02-components/components-headline/package.json
+++ b/src/_patterns/02-components/components-headline/package.json
@@ -10,7 +10,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -27,6 +27,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-uppercase": "^0.0.0"
+    "@bolt/tools-uppercase": "^0.1.0-alpha.bdfcf9e9"
   }
 }
