--- a/src/_patterns/02-components/components-site/package.json
+++ b/src/_patterns/02-components/components-site/package.json
@@ -9,7 +9,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
