--- a/src/_patterns/02-components/components-teaser/package.json
+++ b/src/_patterns/02-components/components-teaser/package.json
@@ -9,7 +9,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.bdfcf9e9",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
