--- a/src/_patterns/02-components/objects-all/package.json
+++ b/src/_patterns/02-components/objects-all/package.json
@@ -9,7 +9,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,11 +36,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/objects-grid": "0.3.0",
-    "@bolt/objects-inline-list": "0.2.0",
-    "@bolt/objects-island": "0.2.0",
-    "@bolt/objects-ratio": "0.3.0",
-    "@bolt/objects-ui-list": "0.3.1",
-    "@bolt/objects-wrapper": "0.3.0"
+    "@bolt/objects-grid": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/objects-inline-list": "^0.3.0-alpha.bdfcf9e9",
+    "@bolt/objects-island": "^0.3.0-alpha.bdfcf9e9",
+    "@bolt/objects-ratio": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/objects-ui-list": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/objects-wrapper": "^0.4.0-alpha.bdfcf9e9"
   }
 }
