--- a/src/_patterns/02-components/objects-grid/package.json
+++ b/src/_patterns/02-components/objects-grid/package.json
@@ -12,7 +12,7 @@
     "objects",
     "grid"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
