--- a/src/_patterns/02-components/objects-inline-list/package.json
+++ b/src/_patterns/02-components/objects-inline-list/package.json
@@ -8,7 +8,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.2.0",
+  "version": "0.3.0-alpha.bdfcf9e9",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
