--- a/src/fonts/package.json
+++ b/src/fonts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/assets-web-fonts",
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.bdfcf9e9",
   "license": "MIT",
   "description": "Static web font assets",
   "repository": {
