--- a/src/package.json
+++ b/src/package.json
@@ -1,16 +1,20 @@
 {
   "name": "@bolt/pattern-library",
-  "version": "0.3.0-alpha.3",
+  "version": "0.3.0-alpha.bdfcf9e9",
   "description": "Bolt + Pattern Lab Integration",
   "dependencies": {
-    "@bolt/assets-web-fonts": "*",
-    "@bolt/settings-all": "^0.5.0",
-    "@bolt/tools-all": "^0.3.0",
-    "@bolt/generic-all": "^0.3.0",
-    "@bolt/elements-all": "^0.3.0",
-    "@bolt/objects-all": "^0.3.0",
-    "@bolt/components-all": "^0.3.0",
-    "@bolt/themes-all": "^0.3.0",
-    "@bolt/utilities-all": "^0.4.0"
+    "@bolt/assets-web-fonts": "^0.1.0-alpha.bdfcf9e9",
+    "@bolt/components-all": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/elements-all": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/generic-all": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/objects-all": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/settings-all": "^0.6.0-alpha.bdfcf9e9",
+    "@bolt/themes-all": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/tools-all": "^0.4.0-alpha.bdfcf9e9",
+    "@bolt/utilities-all": "^0.5.0-alpha.bdfcf9e9"
+  },
+  "private": true,
+  "publishConfig": {
+    "access": "public"
   }
 }
