WIP: stashing latest

--- a/pattern-lab/package.json
+++ b/pattern-lab/package.json
@@ -16,6 +16,7 @@
     "@bolt/build-webpack": "^0.1.0",
     "@bolt/components-article": "^0.3.0",
     "@bolt/components-band": "^0.0.0",
+    "@bolt/components-background": "^0.0.0",
     "@bolt/components-teaser": "^0.0.0",
     "@bolt/components-button": "^0.4.0",
     "@bolt/components-card": "^0.3.0",
