WIP: latest Bolt nightly

--- a/src/_patterns/02-components/01-images/logo/package.json
+++ b/src/_patterns/02-components/01-images/logo/package.json
@@ -13,7 +13,7 @@
     "image",
     "logo"
   ],
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.649a2b68",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -40,6 +40,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/objects-ratio": "0.4.0-alpha.bdfcf9e9"
+    "@bolt/objects-ratio": "^0.4.0-alpha.649a2b68"
   }
 }
