--- a/src/_patterns/02-components/01-images/components-image/package.json
+++ b/src/_patterns/02-components/01-images/components-image/package.json
@@ -9,7 +9,7 @@
     "component",
     "image"
   ],
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.649a2b68",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,6 +36,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/objects-ratio": "0.4.0-alpha.bdfcf9e9"
+    "@bolt/objects-ratio": "^0.4.0-alpha.649a2b68"
   }
 }
