--- a/src/_patterns/02-components/action-block/package.json
+++ b/src/_patterns/02-components/action-block/package.json
@@ -9,7 +9,7 @@
     "design system",
     "components"
   ],
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.649a2b68",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
