--- a/src/_patterns/02-components/bands/package.json
+++ b/src/_patterns/02-components/bands/package.json
@@ -11,7 +11,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.1.0-alpha.bdfcf9e9",
+  "version": "0.1.0-alpha.649a2b68",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -38,6 +38,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-spacing": "0.4.0-alpha.bdfcf9e9"    
+    "@bolt/tools-spacing": "^0.4.0-alpha.649a2b68"
   }
 }
