--- a/src/_patterns/02-components/buttons/02-button-group/package.json
+++ b/src/_patterns/02-components/buttons/02-button-group/package.json
@@ -10,7 +10,7 @@
     "design system",
     "button group"
   ],
-  "version": "0.1.0-alpha.bdfcf9e9",
+  "version": "0.1.0-alpha.649a2b68",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -38,6 +38,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-spacing": "0.4.0-alpha.bdfcf9e9"
+    "@bolt/tools-spacing": "^0.4.0-alpha.649a2b68"
   }
 }
