fix: fixing merge of latest background component work.

--- a/config/config.yml
+++ b/config/config.yml
@@ -77,6 +77,8 @@ plugins:
           - src/_patterns/01-core/05-objects/03-display/bolt-ratio/src
           - src/_patterns/02-components/bolt-action-block/lib
           - src/_patterns/02-components/bolt-action-block/src
+          - src/_patterns/02-components/bolt-background/demo
+          - src/_patterns/02-components/bolt-background/src
           - src/_patterns/02-components/bolt-band/demo
           - src/_patterns/02-components/bolt-band/src
           - src/_patterns/02-components/bolt-button-group/src
