--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bolt",
-  "version": "0.2.0",
+  "version": "0.3.0-alpha.4",
   "description": "Pega Digital Design System",
   "private": true,
   "scripts": {
