--- a/src/_patterns/02-components/bolt-headline/package.json
+++ b/src/_patterns/02-components/bolt-headline/package.json
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/pega-digital/bolt/issues"
   },
-  "style": "src/headline.scss",
+  "style": "src/all-headlines.scss",
   "twig": "h1.twig",
   "publishConfig": {
     "access": "public"
