fix: fixing merge issues

--- a/src/_patterns/02-components/bolt-background/package.json
+++ b/src/_patterns/02-components/bolt-background/package.json
@@ -33,7 +33,7 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "src/_background.scss",
+  "style": "src/background.scss",
   "publishConfig": {
     "access": "public"
   },
