--- a/src/package.json
+++ b/src/package.json
@@ -6,6 +6,7 @@
     "@bolt/assets-web-fonts": "^0.1.0-alpha.649a2b68",
     "@bolt/components-action-block": "0.1.0-alpha.649a2b68",
     "@bolt/components-band": "0.1.0-alpha.649a2b68",
+    "@bolt/components-background": "0.0.0",
     "@bolt/components-button": "0.5.0-alpha.649a2b68",
     "@bolt/components-button-group": "0.1.0-alpha.649a2b68",
     "@bolt/components-card": "0.4.0-alpha.649a2b68",
