WIP: stashing latest

--- a/packages/config-stylelint/package.json
+++ b/packages/config-stylelint/package.json
@@ -25,5 +25,8 @@
     "stylelint-selector-bem-pattern": "^1.1.0",
     "stylelint-selector-pattern": "0.0.2"
   },
-  "main": "index.js"
+  "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  }
 }
