--- a/src/_patterns/02-components/bolt-card/package.json
+++ b/src/_patterns/02-components/bolt-card/package.json
@@ -32,9 +32,13 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "src/_card.scss",
-  "twig": "card.twig",
+  "style": "src/card.scss",
+  "twig": "src/card.twig",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bolt/tools-spacing": "^0.4.0-alpha.649a2b68",
+    "@bolt/tools-color-palette": "^0.4.0-alpha.649a2b68"
   }
 }
