--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -25,5 +25,8 @@
   "engines": {
     "node": ">= 6"
   },
-  "main": "index.js"
+  "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  }
 }
