chore: prep for v0.3.0 release

--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,8 @@
       "pattern-lab/styleguidekit-assets-default": "*",
       "aleksip/plugin-data-transform": "^1.1.0",
       "evanlovely/plugin-twig-namespaces": "dev-master",
-      "oomphinc/composer-installers-extender": "dev-master"
+      "oomphinc/composer-installers-extender": "dev-master",
+        "fullpipe/twig-webpack-extension": "dev-master"
     },
     "config": {
         "process-timeout": 0,
