--- a/src/_patterns/01-core/07-utilities/bolt-text-align/package.json
+++ b/src/_patterns/01-core/07-utilities/bolt-text-align/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/utilities-all",
-  "description": "Collection of all utility classes in Bolt",
+  "name": "@bolt/utilities-text-align",
+  "description": "Text Alignment Utility Classes in Bolt",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -8,7 +8,7 @@
     "design system",
     "utilities"
   ],
-  "version": "0.5.0-alpha.649a2b68",
+  "version": "0.0.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -30,17 +30,8 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "_utilities.all.scss",
+  "style": "src/text-align.scss",
   "publishConfig": {
     "access": "public"
-  },
-  "dependencies": {
-    "@bolt/utilities-clearfix": "^0.4.0-alpha.649a2b68",
-    "@bolt/utilities-colors": "^0.2.0-alpha.649a2b68",
-    "@bolt/utilities-flex": "^0.4.0-alpha.649a2b68",
-    "@bolt/utilities-spacing": "^0.4.0-alpha.649a2b68",
-    "@bolt/utilities-visuallyhidden": "^0.4.0-alpha.649a2b68",
-    "@bolt/utilities-widths": "^0.4.0-alpha.649a2b68",
-    "@bolt/utilities-text-align": "^0.0.0"
   }
 }
