--- a/src/package.json
+++ b/src/package.json
@@ -36,7 +36,8 @@
     "@bolt/objects-ui-list": "0.4.0-alpha.649a2b68",
     "@bolt/objects-wrapper": "0.4.0-alpha.649a2b68",
     "@bolt/themes-all": "^0.4.0-alpha.649a2b68",
-    "@bolt/utilities-all": "^0.5.0-alpha.649a2b68"
+    "@bolt/utilities-all": "^0.5.0-alpha.649a2b68",
+    "@bolt/elements-page": "^0.4.0-alpha.649a2b68"
   },
   "private": true,
   "publishConfig": {
