--- a/build-tools/build-webpack/package.json
+++ b/build-tools/build-webpack/package.json
@@ -22,10 +22,17 @@
     }
   ],
   "dependencies": {
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
     "gulp-util": "^3.0.8",
     "merge": "^1.2.0",
+    "node-sass-export": "0.0.2",
+    "npm-sass": "^2.2.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-dev-server": "^2.7.1",
+    "webpack-manifest-plugin": "^1.3.2"
   },
   "publishConfig": {
     "access": "public"
