--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   },
   "homepage": "https://github.com/bolt-design-system/bolt#readme",
   "dependencies": {
+    "autoprefixer": "^7.1.4",
     "babel-core": "^6.22.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
@@ -89,6 +90,8 @@
     "browser-sync": "^2.18.13",
     "chai": "^4.1.0",
     "chai-fs": "^1.0.0",
+    "clean-css-loader": "^0.1.3",
+    "css-loader": "^0.28.7",
     "cz-conventional-changelog": "^2.0.0",
     "cz-lerna-changelog": "^1.2.1",
     "eslint": "^4.5.0",
@@ -107,10 +110,12 @@
     "lerna-changelog": "0.6.0",
     "lerna-semantic-release": "^9.1.0",
     "mocha": "^3.4.2",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "now-travis": "^1.0.1",
     "npm-run-all": "^4.0.2",
     "path": "^0.12.7",
+    "postcss-loader": "^2.0.6",
     "pre-commit": "^1.2.2",
     "precommit": "^1.2.2",
     "prettier-eslint-cli": "^4.2.1",
@@ -121,9 +126,11 @@
     "remark-preset-lint-consistent": "2.0.1",
     "remark-preset-lint-markdown-style-guide": "2.1.1",
     "remark-preset-lint-recommended": "3.0.1",
+    "sass-loader": "^6.0.6",
     "sass-toolkit": "^2.10.2",
     "serve": "latest",
     "snyk": "^1.36.2",
+    "style-loader": "^0.18.2",
     "stylefmt": "6.0.0",
     "stylelint": "8.0.0",
     "stylelint-scss": "^2.0.1",
