fix: testing fix to server build

--- a/build-tools/build-styles/package.json
+++ b/build-tools/build-styles/package.json
@@ -58,7 +58,7 @@
     "kind-of": "^5.0.2",
     "merge": "^1.2.0",
     "mocha": "^3.4.2",
-    "node-sass-export": "github:bolt-design-system/node-sass-export",
+    "node-sass-export": "github:bolt-design-system/node-sass-export#master",
     "npm-sass": "^2.2.1",
     "postcss-discard-comments": "^2.0.4",
     "postcss-reporter": "^5.0.0",
