--- a/composer.json
+++ b/composer.json
@@ -49,17 +49,15 @@
     "minimum-stability": "dev",
     "require": {
       "php": ">=7.0",
-      "bolt/twig-extensions": "*",
       "cweagans/composer-patches": "~1.0",
       "pattern-lab/core": "^2.7.1",
       "pattern-lab/patternengine-twig": "^2.0.0",
       "pattern-lab/styleguidekit-twig-default": "^3.0.0",
-      "pattern-lab/drupal-twig-components": "^2.0.0",
       "pattern-lab/styleguidekit-assets-default": "*",
       "aleksip/plugin-data-transform": "^1.1.0",
       "evanlovely/plugin-twig-namespaces": "dev-master",
       "oomphinc/composer-installers-extender": "dev-master",
-        "fullpipe/twig-webpack-extension": "dev-master"
+      "bolt/twig-extensions": "*"
     },
     "config": {
         "process-timeout": 0,
