--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "build": "npm run setup:composer && gulp build --production",
+    "build": "npm run setup:composer && gulp build --prod",
     "changelog": "lerna-changelog",
     "commitmsg": "validate-commit-msg",
     "fix:scripts": "gulp scripts:fix",
@@ -31,7 +31,7 @@
     "publish": "lerna run build && lerna run publish-please && lerna publish --no-git",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "serve": "gulp serve",
-    "setup:composer": "if [ ! -f ./bolt-website/index.html ]; then rm -rf composer.lock && rm -rf vendor && composer install --no-interaction --prefer-dist --no-dev; fi",
+    "setup:composer": "if [ ! -f ./bolt-website/index.html ]; then rm -rf composer.lock && rm -rf vendor && rm -rf src/_twig-components && composer update --no-interaction; fi",
     "setup:homebrew": "sh scripts/install-homebrew.sh",
     "snyk-protect": "snyk protect",
     "start": "serve ./boltdesignsystem --single",
@@ -111,6 +111,7 @@
     "lerna-semantic-release": "^9.1.0",
     "mocha": "^3.4.2",
     "node-sass": "^4.5.3",
+    "node-sass-export": "0.0.2",
     "nodemon": "^1.11.0",
     "now-travis": "^1.0.1",
     "npm-run-all": "^4.0.2",
