--- a/src/package.json
+++ b/src/package.json
@@ -37,7 +37,8 @@
     "@bolt/objects-wrapper": "0.4.0-alpha.649a2b68",
     "@bolt/themes-all": "^0.4.0-alpha.649a2b68",
     "@bolt/utilities-all": "^0.5.0-alpha.649a2b68",
-    "@bolt/elements-page": "^0.4.0-alpha.649a2b68"
+    "@bolt/elements-page": "^0.4.0-alpha.649a2b68",
+    "@bolt/elements-headings": "^0.3.0-alpha.649a2b68"
   },
   "private": true,
   "publishConfig": {
