--- a/build-tools/build-webpack/package.json
+++ b/build-tools/build-webpack/package.json
@@ -22,11 +22,13 @@
     }
   ],
   "dependencies": {
+    "clean-css-loader": "^0.1.3",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
+    "fs-extra": "^4.0.2",
     "gulp-util": "^3.0.8",
     "merge": "^1.2.0",
-    "node-sass-export": "0.0.2",
+    "node-sass-export": "github:bolt-design-system/node-sass-export",
     "npm-sass": "^2.2.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
