--- a/config/config.yml
+++ b/config/config.yml
@@ -30,12 +30,11 @@ styleguideKit: pattern-lab/styleguidekit-twig-default
 styleguideKitPath: vendor/pattern-lab/styleguidekit-twig-default
 lineageMatch: >-
   {%([ ]+)?(?:include|extends|embed)(
-  |\()[&quot;\&#039;]([\/.@A-Za-z0-9-]+)[&quot;\&#039;]([
-  A-Za-z0-9-&\}_\n\{&quot;:\&#039;,\/. \[\]]+)%}
+  |\()[&quot;\&#039;]([\/.@A-Za-z0-9-_]+)[&quot;\&#039;]([\s\S+]*?)%}
 lineageMatchKey: 3
 patternExtension: twig
-twigDebug: true
-twigAutoescape: false
+twigDebug: false
+twigAutoescape: html
 twigDefaultDateFormat: ''
 twigDefaultIntervalFormat: ''
 twigMacroExt: macro.twig
@@ -100,3 +99,4 @@ plugins:
           - src/_patterns/02-components/components-card/lib
           - src/_patterns/03-templates/templates-default
           - src/_patterns/04-pages
+    roots: {}
