fix: fixing twig escaping config. setting default PL page to the Bolt homepage.

--- a/config/config.yml
+++ b/config/config.yml
@@ -20,7 +20,7 @@ cacheBusterOn: 'true'
 exportDir: export
 publicDir: bolt-website
 sourceDir: src
-defaultPattern: 05-pages-bolt-homepage
+defaultPattern: pages-bolt-homepage
 defaultShowPatternInfo: false
 ishMinimum: '240'
 ishMaximum: '2600'
@@ -34,7 +34,7 @@ lineageMatch: >-
 lineageMatchKey: 3
 patternExtension: twig
 twigDebug: false
-twigAutoescape: html
+twigAutoescape: false
 twigDefaultDateFormat: ''
 twigDefaultIntervalFormat: ''
 twigMacroExt: macro.twig
